# ros_ws

./: .gitignore  .gitmodules  README.md  balldetection.py  requirements.txt  servertest.py
gazebo_plugin/: CMakeLists.txt  hello.world  model_push.cc  model_push.world  typhoon_h480.sdf
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_movement/lib/drone_movement/: boat_publisher  print_test  yf_offboard  yf_offboard1
install/drone_movement/share/drone_movement/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/drone_orbit/share/drone_orbit/: package.bash  package.ps1  package.sh  package.zsh
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/drone_movement/lib/drone_movement/: offload_control  orbit_cmd
src/install/drone_movement/share/drone_movement/: package.ps1  (+1 more)
src/log/: latest_build
src/target_offset/: package.xml  setup.cfg  setup.py
src/target_offset/launch/: launch_oc_and_video.py  oc_and_video.launch.py
src/target_offset/target_offset/: oc.py  oc_live_stream.py  video_sub.py
src/visual_servo/: package.xml  setup.cfg  setup.py
src/visual_servo/launch/: visual_servo.launch.py  visual_servo_launch.py  vservo_dummy.launch.py  vservo_video.launch.py
src/visual_servo/visual_servo/: camera_stream.py  target_publisher.py  tune_publisher.py  waypointPublisher.py
src/visual_servo/visual_servo/src/: offboard_control.py
src/visual_servo_interfaces/: CMakeLists.txt  package.xml
src/visual_servo_interfaces/msg/: TargetOffset.msg  TuneController.msg
(+36 files in other folders)
